# corral

./: .cmake-format  .gitignore  CMakeLists.txt  COPYING  README.md
.github/workflows/: ci.yml
cmake/: getCPM.cmake
corral/: CBPortal.h  Channel.h  DegenerateThreadPool.h  ErrorPolicy.h  Event.h  Executor.h  Nursery.h  ParkingLot.h  Semaphore.h  Shared.h  Task.h  ThreadPool.h  Value.h  asio-standalone.h  asio.h  concepts.h  config.h  corral.h  defs.h  run.h  utility.h  wait.h
corral/detail/: ABI.h  IntrusiveList.h  IntrusivePtr.h  Optional.h  ParkingLot.h  PointerBits.h  Promise.h  Queue.h  ScopeGuard.h  Sequence.h  TaskAwaiter.h  With.h  asio.h  concept_helpers.h  exception.h  frames.h  introspect.h  platform.h  task_awaitables.h  utility.h  wait.h
doc/: 01_getting_started.md  02_adapting.md  03_live_objects.md  04_callback_bridging.md  05_reference.md
examples/: CMakeLists.txt  asio_echo_server.cc  asio_happy_eyeballs.cc  asio_hello_world.cc  asio_http_downloader.cc  asio_netcat.cc  qt_echo_server.cc
test/: TestEventLoop.h  adapter_test.cc  asio_test.cc  basic_test.cc  callback_test.cc  channel_test.cc  combiner_test.cc  config.h  degenerate_thread_pool_test.cc  error_policy_test.cc  helpers.h  nursery_test.cc  stack_trace_test.cc  sync_primitive_test.cc
